# phantom-evasion

./: .gitignore  README.md  config.yaml  main.py  requirements.txt
av_test/: __init__.py  defender_scan.py  detection_report.py
core/: __init__.py  compiler.py  loader.py  metadata_spoofer.py  obfuscator.py  tester.py
output/: detection_report_2026-03-04T19-25-59Z_iter1.md
techniques/: __init__.py
techniques/edr_bypass/: __init__.py  api_hashing.py  direct_syscalls.py  hells_gate.py  indirect_syscalls.py  module_stomping.py  unhook_ntdll.py
techniques/encryption/: __init__.py  aes_encrypt.py  chacha20_encrypt.py  rc4_encrypt.py  xor_encrypt.py
techniques/etw_bypass/: __init__.py  patch_amsi.py  patch_etw.py
techniques/injection/: __init__.py  apc_injection.py  callback_injection.py  classic_injection.py  early_bird.py  fiber_injection.py  thread_hijack.py
techniques/obfuscation/: __init__.py  control_flow_flatten.py  junk_code.py  polymorphic.py  string_encrypt_stack.py  string_obfuscate.py
techniques/sandbox_evasion/: __init__.py  delayed_exec.py  env_checks.py  parent_spoof.py  resource_check.py  sleep_encrypt.py
techniques/xdr_evasion/: __init__.py  log_tampering.py  network_evasion.py  process_masquerade.py
templates/: Cargo.toml  loader_c.c  loader_go.go  loader_rust.rs
tools/: __init__.py  generate_test_shellcode.py
